external-projects/sui-prover/crates/sui-prover/tests/snapshots/ghost_borrow_mut/borrow_mut_ret_fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: multiple ghost borrow_mut
   ┌─ tests/inputs/ghost_borrow_mut/borrow_mut_ret_fail.move:16:3
   │
16 │   ghost::borrow_mut<GhostStruct, bool>();
   │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
